--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.2.29",
     "gatsby-plugin-typescript": "^2.4.3",
+    "gatsby-plugin-typography": "^2.5.10",
     "gatsby-source-contentful": "^2.1.50",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.3",
@@ -29,7 +30,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
-    "typescript": "^3.9.3"
+    "react-typography": "^0.16.19",
+    "typescript": "^3.9.3",
+    "typography": "^0.16.19",
+    "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
